# phantom

./: .env.example  .gitignore  .graphifyignore  CLAUDE.md  Cargo.toml  PHANTOM.md  PHASE2-PLAN.md  PLAN.md  README.md  SPEC.md  TASKS.md  VISION.md  config_disable_crt.toml  design.md  railway.toml  run.sh
crates/phantom-adapter/: Cargo.toml
crates/phantom-adapter/src/: adapter.rs  bus.rs  lib.rs  lifecycle.rs  protocol.rs  registry.rs  spatial.rs
crates/phantom-agents/: Cargo.toml
crates/phantom-agents/examples/: propose_skill_demo.rs
crates/phantom-agents/src/: agent.rs  api.rs  audit.rs  chat.rs  chat_tools.rs  cli.rs  composer_tools.rs  correlation.rs  dag_explorer.rs  defender.rs  defender_tools.rs  dispatch.rs  dispatcher.rs  failure_store.rs  fixer.rs  handoff.rs  inbox.rs  inspector.rs  lib.rs  lifecycle.rs  manager.rs  mcp_tools.rs  peer_grants.rs  peer_routing.rs  permissions.rs  plan.rs  policy.rs  quarantine.rs  render.rs  role.rs  router.rs  sandbox.rs  self_extension_tools.rs  semantic_context.rs  skill_registry.rs  spawn_rules.rs  speech.rs  subagent_emit.rs  suggest.rs  supervisor.rs  (+3 more)
crates/phantom-agents/tests/: auto_approve_adversarial.rs  complete_task_adversarial.rs  complete_task_broader.rs  complete_task_spike.rs  defender_loop_smoke.rs  event_log_adversarial.rs  qa_security_concurrency.rs
crates/phantom-app/: Cargo.toml
crates/phantom-app/src/: action_context.rs  agent_pane.rs  app.rs  appmon.rs  boot.rs  boot_order.rs  capture.rs  commands.rs  config.rs  config_watcher.rs  console.rs  console_eval.rs  context_menu.rs  coordinator.rs  dag_commands.rs  files_watcher.rs  gallery_spawn.rs  image_handler.rs  input.rs  inspector.rs  jobs.rs  keystroke_fx.rs  lib.rs  lineage.rs  logging.rs  mcp_discovery.rs  mouse.rs  notifications.rs  pane.rs  peer_grants.rs  profiler.rs  render.rs  render_overlay.rs  resources.rs  runtime.rs  search.rs  selftest.rs  session.rs  settings.rs  settings_ui.rs  (+8 more)
crates/phantom-app/tests/: boot_smoke.rs  clipboard_dispatch_smoke.rs  dag_command_bus_smoke.rs  history_wiring_smoke.rs  inspector_denials_smoke.rs  nlp_translate_integration.rs  phase5_integration.rs
crates/phantom-audio/: Cargo.toml
crates/phantom-audio/src/: lib.rs  macos_sck.rs
crates/phantom-brain/: Cargo.toml
crates/phantom-brain/src/: attention.rs  brain.rs  capability_audit.rs  chat_backend.rs  claude.rs  curriculum.rs  curves.rs  decompose.rs  dispatch.rs  events.rs  goal.rs  goals.rs  lib.rs  ollama.rs  ooda.rs  orchestrator.rs  persistent_skill_registry.rs  plan_extractor.rs  proactive.rs  provider_catalog.rs  recall.rs  reconciler.rs  router.rs  scoring.rs  self_improvement.rs  skill_store.rs
crates/phantom-brain/tests/: dispatch_guard.rs  dispatch_guard_adversarial.rs  privacy_gate_e2e.rs  quarantine_cascade_adversarial.rs  quarantine_policy.rs  self_improvement_integration.rs
crates/phantom-builder/: Cargo.toml
crates/phantom-builder/src/: clone.rs  lib.rs  orchestrate.rs  safety.rs  templates.rs
crates/phantom-builder/templates/: pr_finder_impl.toml
crates/phantom-builder/tests/: builder_smoke.rs
crates/phantom-bundle-store/: Cargo.toml
crates/phantom-bundle-store/src/: crypto.rs  lance.rs  lancedb_index.rs  lib.rs  migrate.rs  recovery.rs  sqlite.rs
crates/phantom-bundle-store/tests/: pipeline_smoke.rs  recovery.rs
crates/phantom-bundles/: Cargo.toml
crates/phantom-bundles/src/: assembler.rs  events.rs  lib.rs  session.rs
crates/phantom-bundles/tests/: serialization.rs
crates/phantom-dag/: Cargo.toml
crates/phantom-dag/src/: edge.rs  lib.rs  node.rs  overlay.rs  persist.rs  union_find.rs
crates/phantom-dag/tests/: cargo_metadata_tests.rs
crates/phantom-embeddings/: Cargo.toml
crates/phantom-embeddings/src/: lib.rs  openai.rs  store.rs
crates/phantom-fleet/: Cargo.toml
crates/phantom-fleet/src/: app_kind.rs  error.rs  lib.rs  registry.rs  run.rs  spec.rs
crates/phantom-fleet/tests/: fleet_smoke.rs
crates/phantom-history/: Cargo.toml
crates/phantom-history/src/: agent_capture.rs  jsonl.rs  lib.rs  store.rs
crates/phantom-hub/: Cargo.toml  Dockerfile
crates/phantom-hub/docs/: operator-key-provisioning.md
crates/phantom-hub/src/: auth.rs  health.rs  lib.rs  main.rs  mcp_endpoint.rs  peer_key_store.rs  phantom_endpoint.rs  rate_limit.rs  registry.rs  router.rs
crates/phantom-hub/tests/: connection_registry.rs  cross_surface_register_to_ws.rs  frame_routing.rs  registration_handshake.rs
crates/phantom-loop/: Cargo.toml
crates/phantom-loop/src/: action_handler.rs  effect.rs  effect_runner.rs  error.rs  exit.rs  id.rs  lib.rs  preflight.rs  queue.rs  registry.rs  source.rs  spec.rs
crates/phantom-loop/tests/: agentless_effects.rs  e2e_brain_to_loop.rs  e2e_substrate.rs  end_to_end_loop.rs  exit_schema_validation.rs  mvp_specs.rs  queue_routing.rs  runner_smoke.rs  spec_roundtrip.rs
crates/phantom-mcp/: Cargo.toml
crates/phantom-mcp/src/: client.rs  error.rs  hub_listener.rs  lib.rs  listener.rs  protocol.rs  registry.rs  server.rs
crates/phantom-memory/: Cargo.toml
crates/phantom-memory/src/: clock.rs  event_log.rs  handoff_log.rs  journal.rs  lib.rs  memory_blocks.rs  notifications.rs  schema.rs  store.rs
crates/phantom-net/: Cargo.toml
crates/phantom-net/src/: client.rs  credentials.rs  envelope.rs  heartbeat.rs  identity.rs  lib.rs  tests.rs  transport.rs
crates/phantom-nlp/: Cargo.toml
crates/phantom-nlp/src/: interpreter.rs  lib.rs  llm_export.rs  translate.rs
crates/phantom-nlp/tests/: swap_with_state.rs
crates/phantom-plugins/: Cargo.toml
crates/phantom-plugins/src/: builtins.rs  error.rs  host.rs  lib.rs  manifest.rs  marketplace.rs  registry.rs  script.rs  wasm_host.rs
crates/phantom-recall/: Cargo.toml
crates/phantom-relay/: Cargo.toml
crates/phantom-renderer/: Cargo.toml
crates/phantom-semantic/: Cargo.toml
crates/phantom-session/: Cargo.toml
crates/phantom-skill-host/: Cargo.toml
crates/phantom-substrate/: Cargo.toml
crates/phantom-supervisor/: Cargo.toml
crates/phantom-ui/: Cargo.toml
crates/phantom-vision/: Cargo.toml
docs/: HANDOFF.md  (+14 more)
(+311 files in other folders)
