[workspace]
members = [
    "crates/phantom",
    "crates/phantom-renderer",
    "crates/phantom-terminal",
    "crates/phantom-ui",
    "crates/phantom-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jeremy Miranda <jdmiranda>"]
repository = "https://github.com/jdmiranda/phantom"

[workspace.dependencies]
# GPU rendering
wgpu = "25"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# Text rendering
cosmic-text = "0.12"

# Terminal emulation
alacritty_terminal = "0.26"

# Layout
taffy = "0.7"

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1"
