[workspace]
members = [
    "crates/phantom",
    "crates/phantom-renderer",
    "crates/phantom-terminal",
    "crates/phantom-ui",
    "crates/phantom-app",
    "crates/phantom-protocol",
    "crates/phantom-supervisor",
    "crates/phantom-semantic",
    "crates/phantom-history",
    "crates/phantom-agents",
    "crates/phantom-context",
    "crates/phantom-memory",
    "crates/phantom-session",
    "crates/phantom-nlp",
    "crates/phantom-plugins",
    "crates/phantom-mcp",
    "crates/phantom-scene",
    "crates/phantom-brain",
    "crates/phantom-adapter",
    # Retrieval / recall (Phase 2.H).
    "crates/phantom-recall",
    # Capture / bundle pipeline (Phase 2.G).
    "crates/phantom-vision",
    "crates/phantom-bundles",
    "crates/phantom-bundle-store",
    "crates/phantom-embeddings",
    # Voice synthesis (TTS) — OpenAI backend + mock.
    "crates/phantom-voice",
]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
must_use_candidate = "warn"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jeremy Miranda <jdmiranda>"]
repository = "https://github.com/jdmiranda/phantom"

[workspace.dependencies]
# GPU rendering
wgpu = "25"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# Text rendering
cosmic-text = "0.12"

# Terminal emulation
alacritty_terminal = "0.26"

# Layout
taffy = "0.7"

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1"
bitflags = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
