[package]
name = "phantom-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
phantom-protocol = { path = "../phantom-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
