[package]
name = "phantom-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-semantic = { path = "../phantom-semantic" }
phantom-protocol = { path = "../phantom-protocol" }

log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
