[package]
name = "phantom-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-semantic = { path = "../phantom-semantic" }
phantom-protocol = { path = "../phantom-protocol" }
phantom-memory = { path = "../phantom-memory" }

log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json", "platform-verifier"] }
glob = "0.3"

# Phase 1/2 substrate primitives (audit, inbox, supervisor, etc.).
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt", "json"] }
tracing-appender = "0.2"
blake3 = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros", "test-util"] }

[lints]
workspace = true
