[package]
name = "phantom-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-renderer = { path = "../phantom-renderer" }
phantom-terminal = { path = "../phantom-terminal" }
phantom-ui = { path = "../phantom-ui" }
phantom-protocol = { path = "../phantom-protocol" }
phantom-brain = { path = "../phantom-brain" }
phantom-semantic = { path = "../phantom-semantic" }
phantom-context = { path = "../phantom-context" }
phantom-memory = { path = "../phantom-memory" }
phantom-nlp = { path = "../phantom-nlp" }
phantom-session = { path = "../phantom-session" }
phantom-agents = { path = "../phantom-agents" }
phantom-history = { path = "../phantom-history" }
phantom-scene = { path = "../phantom-scene" }
phantom-mcp = { path = "../phantom-mcp" }
phantom-adapter = { path = "../phantom-adapter" }
phantom-plugins = { path = "../phantom-plugins" }

winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
log.workspace = true
anyhow.workspace = true
bitflags.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
arboard = "3"

[features]
phantom-profile = []

[dev-dependencies]
png = "0.17"

[lints]
workspace = true
