[package]
name = "phantom-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-renderer = { path = "../phantom-renderer" }
phantom-terminal = { path = "../phantom-terminal" }
phantom-ui = { path = "../phantom-ui" }
phantom-protocol = { path = "../phantom-protocol" }
phantom-brain = { path = "../phantom-brain" }
phantom-semantic = { path = "../phantom-semantic" }
phantom-context = { path = "../phantom-context" }
phantom-memory = { path = "../phantom-memory" }
phantom-nlp = { path = "../phantom-nlp" }
phantom-session = { path = "../phantom-session" }
phantom-agents = { path = "../phantom-agents" }
phantom-history = { path = "../phantom-history" }
phantom-scene = { path = "../phantom-scene" }
phantom-mcp = { path = "../phantom-mcp" }
phantom-adapter = { path = "../phantom-adapter" }
phantom-plugins = { path = "../phantom-plugins" }
phantom-vision = { path = "../phantom-vision" }
phantom-bundles = { path = "../phantom-bundles" }
phantom-bundle-store = { path = "../phantom-bundle-store" }
phantom-embeddings = { path = "../phantom-embeddings" }
phantom-stt = { path = "../phantom-stt" }

winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
log.workspace = true
anyhow.workspace = true
bitflags.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
arboard = "3"

# Image encoding for frame blob persistence (capture pipeline).
# `default-features = false` strips out tiff/jpeg/etc. — we only need PNG.
image = { version = "0.25", default-features = false, features = ["png"] }
# Tokio current-thread runtime for synchronous embedding calls inside
# JobPool worker threads. The OpenAI backend is `async`, but JobPayload::run
# is sync — we drive the async call by spinning up a per-job runtime.
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }

[features]
phantom-profile = []
# Enables headless (no-GPU) boot path for CI integration tests.
# Activated automatically by `cargo test -p phantom-app --features headless`.
headless = []

[dev-dependencies]
png = "0.17"
tempfile = "3"
phantom-ui = { path = "../phantom-ui", features = ["test-utils"] }
phantom-bundle-store = { path = "../phantom-bundle-store", features = ["testing"] }
phantom-stt = { path = "../phantom-stt", features = ["test-utils"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
phantom-nlp = { path = "../phantom-nlp", features = ["testing"] }
phantom-context = { path = "../phantom-context" }

[lints]
workspace = true
