[package]
name = "phantom-brain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-semantic = { path = "../phantom-semantic" }
phantom-agents = { path = "../phantom-agents" }
phantom-adapter = { path = "../phantom-adapter" }
phantom-context = { path = "../phantom-context" }
phantom-memory = { path = "../phantom-memory" }
phantom-history = { path = "../phantom-history" }

log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
tokio = { version = "1", features = ["fs", "sync", "rt", "macros"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[lints]
workspace = true
