[package]
name = "phantom-brain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-recall = { path = "../phantom-recall" }
phantom-embeddings = { path = "../phantom-embeddings" }
phantom-semantic = { path = "../phantom-semantic" }
phantom-agents = { path = "../phantom-agents" }
phantom-adapter = { path = "../phantom-adapter" }
phantom-context = { path = "../phantom-context" }
phantom-memory = { path = "../phantom-memory" }
phantom-history = { path = "../phantom-history" }

log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
tokio = { version = "1", features = ["fs", "sync", "rt", "macros"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serial_test = "3"
uuid.workspace = true
# Required for the self-improvement integration test, which forwards
# `AiAction::EnqueueLoopMessage` payloads onto a real `LoopQueueRegistry`
# the same way the app handler will. Brain code itself does NOT depend on
# phantom-loop at runtime — only the integration test does.
phantom-loop = { path = "../phantom-loop" }

[lints]
workspace = true
