[package]
name = "phantom-bundle-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified bundle store: SQLite (encrypted via SQLCipher) + LanceDB vectors with two-phase writes."

[features]
default = ["vector_search_disabled"]
vector_search_disabled = []
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:tokio", "dep:futures"]
vector_search_lancedb = ["lancedb"]
testing = []

[dependencies]
phantom-bundles = { path = "../phantom-bundles" }
phantom-embeddings = { path = "../phantom-embeddings" }
rusqlite = { version = "0.36", features = ["bundled-sqlcipher-vendored-openssl", "blob", "serde_json"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
lancedb = { version = "0.27", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }
futures = { version = "0.3", optional = true }
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
phantom-bundle-store = { path = ".", features = ["testing"] }
phantom-vision = { path = "../phantom-vision" }

[lints]
workspace = true
