[package]
name = "phantom-bundles"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
bincode = { version = "2", features = ["derive"] }
log = "0.4"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
