[package]
name = "phantom-fleet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Universal app trait + registry — `phantom-fleet` is a thin orchestrator on
# top of the existing "everything is an app" abstraction in phantom-adapter.
phantom-adapter = { path = "../phantom-adapter" }

# Loop overseer infrastructure. The fleet boots ONE
# `LoopQueueRegistry` and ONE `SubstrateAgentDispatcher` shared across every
# hosted app, and reuses the existing loop runner for `AppKind::Loop`.
phantom-loop    = { path = "../phantom-loop" }

# Per-target self-improvement reconciler — one shared brain across all hosted
# apps. Each builder entry appends its target repo to the brain's
# `goal_sources` list at fleet boot.
phantom-brain   = { path = "../phantom-brain" }

# Substrate dispatcher backend dependency: `SpawnSubagentQueue` lives here and
# the fleet pre-allocates one to wire into the shared dispatcher + driver.
phantom-agents  = { path = "../phantom-agents" }

# Tokio mpsc bus type for the substrate driver -> completion router forwarder
# task. Re-exported through `phantom_loop::SubstrateDriver` but the fleet owns
# the bus construction directly.
phantom-protocol = { path = "../phantom-protocol" }

# NOTE on `phantom-builder` integration:
#
# The sibling agent's `phantom-builder` crate is intentionally NOT declared
# as a dependency here. Cargo's `optional = true` for a path dep still
# requires the path to exist at workspace load time, which would break the
# workspace before the sibling agent's PR merges. The integration is
# instead handled via `cfg(feature = "builder-apps")` blocks in `run.rs`
# that import `phantom_builder::*` only when the feature is enabled.
#
# To enable the integration once `phantom-builder` lands:
#   1. Add `phantom-builder = { path = "../phantom-builder", optional = true }`
#      to this `[dependencies]` table.
#   2. Change the `builder-apps` feature below to:
#      `builder-apps = ["dep:phantom-builder"]`.
#   3. Rebuild with `cargo build -p phantom-fleet --features builder-apps`.

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros", "signal"] }

[features]
# Wire `AppKind::Builder` to the real `phantom-builder` crate. Default OFF so
# the workspace compiles even when the sibling agent's PR has not yet merged.
# See the `phantom-builder` note above for the post-merge wiring steps.
default = []
builder-apps = []

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros", "test-util"] }
tempfile = "3"

[lints]
workspace = true
