[package]
name = "phantom-history"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-semantic = { path = "../phantom-semantic" }
log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid.workspace = true
chrono.workspace = true
fs2 = "0.4"       # file locking for HistoryStore — closes #286

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
