[package]
name = "phantom-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Railway-hosted MCP fleet control hub — connection broker, auth, and JSON-RPC router"

[lib]
name = "phantom_hub"
path = "src/lib.rs"

[[bin]]
name = "phantom-hub"
path = "src/main.rs"

[dependencies]
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
