[package]
name = "phantom-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Railway-hosted MCP fleet control hub — connection broker, auth, and JSON-RPC router"

[lib]
name = "phantom_hub"
path = "src/lib.rs"

[[bin]]
name = "phantom-hub"
path = "src/main.rs"

[dependencies]
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JWT issuance and verification (HS256, issue #398).
# Chosen: `jsonwebtoken` — most widely used Rust JWT crate, actively maintained,
# supports HS256/RS256, has first-class claims validation (exp, iat, iss).
# Phase 3 will swap to RS256; the algorithm is a single-field change.
jsonwebtoken = "9"

# SHA-256 for API key hashing (issue #398).
sha2 = "0.10"

# Constant-time comparison to prevent timing attacks on API key comparison.
subtle = "2"

# Ed25519 for verifying Phantom registration signatures.
# Must stay in sync with phantom-net's version.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# LRU cache for nonce replay protection (issues #398, #499).
# Evicts oldest entries at capacity — no full-clear, bounded memory.
lru = "0.12"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
