[package]
name = "phantom-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros", "net"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros", "net", "test-util"] }

[lints]
workspace = true
